First commit, Support DuckDB Engine