@@ -1,14 +1,22 @@
 /*
-   Copyright (c) 2010, 2011, Oracle and/or its affiliates. All rights reserved.
+   Copyright (c) 2010, 2025, Oracle and/or its affiliates.
 
    This program is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; version 2 of the License.
+   it under the terms of the GNU General Public License, version 2.0,
+   as published by the Free Software Foundation.
+
+   This program is designed to work with certain software (including
+   but not limited to OpenSSL) that is licensed under separate terms,
+   as designated in a particular file or component or in included license
+   documentation.  The authors of MySQL hereby grant you an additional
+   permission to link the program and your derivative works with the
+   separately licensed software that they have either included with
+   the program or referenced in the documentation.
 
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
+   GNU General Public License, version 2.0, for more details.
 
    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
@@ -21,7 +29,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 
 import java.util.ArrayList;
@@ -35,6 +43,17 @@ import java.util.Map;
  */
 public class ClusterJHelper {
 
+    /** My class loader */
+    static ClassLoader CLUSTERJ_HELPER_CLASS_LOADER = ClusterJHelper.class.getClassLoader();
+
+    /** Return a new Dbug instance.
+     * 
+     * @return a new Dbug instance
+     */
+    public static Dbug newDbug() {
+        return getServiceInstance(Dbug.class);
+    }
+
     /** Locate a SessionFactory implementation by services lookup. The class loader
      * used is the thread's context class loader.
      *
@@ -43,7 +62,7 @@ public class ClusterJHelper {
      * @throws ClusterFatalUserException if the connection to the cluster cannot be made
      */
     public static SessionFactory getSessionFactory(Map props) {
-        return getSessionFactory(props, Thread.currentThread().getContextClassLoader());
+        return getSessionFactory(props, CLUSTERJ_HELPER_CLASS_LOADER);
     }
 
     /** Locate a SessionFactory implementation by services lookup of
@@ -69,7 +88,7 @@ public class ClusterJHelper {
      * @return the service instance
      */
     public static <T> T getServiceInstance(Class<T> cls) {
-        return getServiceInstance(cls, Thread.currentThread().getContextClassLoader());
+        return getServiceInstance(cls, CLUSTERJ_HELPER_CLASS_LOADER);
     }
 
     /** Locate all service implementations by services lookup of
@@ -106,7 +125,7 @@ public class ClusterJHelper {
                 bufferedReader = new BufferedReader(inputStreamReader);
                 factoryName = bufferedReader.readLine();
                 Class<T> serviceClass = (Class<T>)Class.forName(factoryName, true, loader);
-                T service = serviceClass.newInstance();
+                T service = serviceClass.getConstructor().newInstance();
                 if (service != null) {
                     result.add(service);
                 }
@@ -118,6 +137,10 @@ public class ClusterJHelper {
                 errorMessages.append(ex.toString());
             } catch (IllegalAccessException ex) {
                 errorMessages.append(ex.toString());
+            } catch (InvocationTargetException e) {
+                errorMessages.append(e.toString());
+            } catch (NoSuchMethodException e) {
+                errorMessages.append(e.toString());
             } finally {
                 try {
                     if (inputStream != null) {
@@ -160,23 +183,23 @@ public class ClusterJHelper {
      * looking up. If the implementation class is not loadable or does not
      * implement the interface, throw an exception.
      * @param cls
-     * @param implementationClassName
+     * @param implementationClassName name of implementation class to load
+     * @param loader the ClassLoader to use to find the service
      * @return the implementation instance for a service
      */
     @SuppressWarnings("unchecked") // (Class<T>)clazz
-    public static <T> T getServiceInstance(Class<T> cls, String implementationClassName) {
+    public static <T> T getServiceInstance(Class<T> cls, String implementationClassName, ClassLoader loader) {
         if (implementationClassName == null) {
-            return getServiceInstance(cls);
+            return getServiceInstance(cls, loader);
         } else {
             try {
-                ClassLoader loader = Thread.currentThread().getContextClassLoader();
                 Class<?> clazz = Class.forName(implementationClassName, true, loader);
                 Class<T> serviceClass = null;
                 if (!(cls.isAssignableFrom(clazz))) {
                    throw new ClassCastException(cls.getName() + " " + implementationClassName);
                 }
                 serviceClass = (Class<T>)clazz;
-                T service = serviceClass.newInstance();
+                T service = serviceClass.getConstructor().newInstance();
                 return service;
             } catch (ClassNotFoundException e) {
                 throw new ClusterJFatalUserException(implementationClassName, e);
@@ -186,8 +209,53 @@ public class ClusterJHelper {
                 throw new ClusterJFatalUserException(implementationClassName, e);
             } catch (IllegalAccessException e) {
                 throw new ClusterJFatalUserException(implementationClassName, e);
+            } catch (InvocationTargetException e) {
+                throw new ClusterJFatalUserException(implementationClassName, e);
+            } catch (NoSuchMethodException e) {
+                throw new ClusterJFatalUserException(implementationClassName, e);
             }
         }
+    }
+
+    /** Locate a service implementation for a service.
+     * If the implementation name is not null, use it instead of
+     * looking up. If the implementation class is not loadable or does not
+     * implement the interface, throw an exception.
+     * Use the ClusterJHelper class loader to find the service.
+     * @param cls
+     * @param implementationClassName
+     * @return the implementation instance for a service
+     */
+    public static <T> T getServiceInstance(Class<T> cls, String implementationClassName) {
+        return getServiceInstance(cls, implementationClassName, CLUSTERJ_HELPER_CLASS_LOADER);
+    }
+
+    /** Get the named boolean property from either the environment or system properties.
+     * If the property is not 'true' then return false.
+     * @param propertyName the name of the property
+     * @param def the default if the property is not set 
+     * @return the system property if it is set via -D or the system environment
+     */
+    public static boolean getBooleanProperty(String propertyName, String def) {
+        String propertyFromEnvironment = System.getenv(propertyName);
+        // system property overrides environment variable
+        String propertyFromSystem = System.getProperty(propertyName,
+                propertyFromEnvironment==null?def:propertyFromEnvironment);
+        boolean result = propertyFromSystem.equals("true")?true:false;
+        return result;
+    }
+
+    /** Get the named String property from either the environment or system properties.
+     * @param propertyName the name of the property
+     * @param def the default if the property is not set 
+     * @return the system property if it is set via -D or the system environment
+     */
+    public static String getStringProperty(String propertyName, String def) {
+        String propertyFromEnvironment = System.getenv(propertyName);
+        // system property overrides environment variable
+        String result = System.getProperty(propertyName,
+                propertyFromEnvironment==null?def:propertyFromEnvironment);
+        return result;
     }
 
 }
