@@ -1,14 +1,22 @@
 /*
-   Copyright (c) 2010, 2011, Oracle and/or its affiliates. All rights reserved.
+   Copyright (c) 2010, 2025, Oracle and/or its affiliates.
 
    This program is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; version 2 of the License.
+   it under the terms of the GNU General Public License, version 2.0,
+   as published by the Free Software Foundation.
+
+   This program is designed to work with certain software (including
+   but not limited to OpenSSL) that is licensed under separate terms,
+   as designated in a particular file or component or in included license
+   documentation.  The authors of MySQL hereby grant you an additional
+   permission to link the program and your derivative works with the
+   separately licensed software that they have either included with
+   the program or referenced in the documentation.
 
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
+   GNU General Public License, version 2.0, for more details.
 
    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
@@ -18,6 +26,7 @@
 package com.mysql.clusterj.core.metadata;
 
 import com.mysql.clusterj.core.spi.DomainFieldHandler;
+import com.mysql.clusterj.core.spi.ValueHandlerFactory;
 import com.mysql.clusterj.core.spi.ValueHandler;
 import com.mysql.clusterj.ClusterJException;
 import com.mysql.clusterj.ClusterJFatalInternalException;
@@ -27,37 +36,38 @@ import com.mysql.clusterj.ColumnMetadata;
 import com.mysql.clusterj.DynamicObjectDelegate;
 
 import com.mysql.clusterj.annotation.PersistenceCapable;
+import com.mysql.clusterj.annotation.Projection;
 
 import com.mysql.clusterj.core.CacheManager;
 
 import com.mysql.clusterj.core.store.Column;
+import com.mysql.clusterj.core.store.Db;
 import com.mysql.clusterj.core.store.Index;
 import com.mysql.clusterj.core.store.Dictionary;
 import com.mysql.clusterj.core.store.Operation;
+import com.mysql.clusterj.core.store.ResultData;
 
-
-
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 /** This instance manages a persistence-capable type.
- * Currently, only interfaces can be persistence-capable. Persistent
- * properties consist of a pair of bean-pattern methods for which the
+ * Currently, only interfaces or subclasses of DynamicObject can be persistence-capable.
+ * Persistent properties consist of a pair of bean-pattern methods for which the
  * get method returns the same type as the parameter of the 
  * similarly-named set method.
  * @param T the class of the persistence-capable type
  */
 public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
+
+    public interface Finalizable {
+        void finalize() throws Throwable;
+    }
 
     /** The domain class. */
     Class<T> cls;
@@ -69,45 +79,66 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
     private Map<String, Method> unmatchedGetMethods = new HashMap<String, Method>();
     private Map<String, Method> unmatchedSetMethods = new HashMap<String, Method>();
 
-    /** The Proxy class for the Domain Class. */
-    protected Class<T> proxyClass;
-
-    /** The constructor for the Proxy class. */
-    Constructor<T> ctor;
+    /** The proxy interfaces implemented by the domain object */
+    Class<?>[] proxyInterfaces = null;
 
     /** The PersistenceCapable annotation for this class. */
     PersistenceCapable persistenceCapable;
 
-    /** Helper parameter for constructor. */
-    protected static final Class<?>[] invocationHandlerClassArray = 
-            new Class[]{InvocationHandler.class};
+    /** The smart value handler factory */
+    ValueHandlerFactory valueHandlerFactory;
+
+    /* The column number is the entry indexed by field number */
+    private int[] fieldNumberToColumnNumberMap;
+
+    /* The number of transient (non-persistent) fields in the domain model */
+    private int numberOfTransientFields;
+
+    /* The field handlers for transient fields */
+    private DomainFieldHandlerImpl[] transientFieldHandlers;
 
     /** Initialize DomainTypeHandler for a class.
      * 
-     * @param cls the domain class (this is the only class 
-     * known to the rest of the implementation)
+     * @param cls the domain class (this is the only class known to the rest of the implementation)
      * @param dictionary NdbDictionary instance used for metadata access
      */
-    @SuppressWarnings( "unchecked" )
     public DomainTypeHandlerImpl(Class<T> cls, Dictionary dictionary) {
+        this(cls, dictionary, null);
+    }
+
+    @SuppressWarnings( "unchecked" )
+    public DomainTypeHandlerImpl(Class<T> cls, Dictionary dictionary,
+            ValueHandlerFactory smartValueHandlerFactory) {
+        this.valueHandlerFactory = smartValueHandlerFactory!=null?
+                smartValueHandlerFactory:
+                defaultInvocationHandlerFactory;
         this.cls = cls;
         this.name = cls.getName();
-        this.dynamic = DynamicObject.class.isAssignableFrom(cls);
-        if (dynamic) {
+        if (DynamicObject.class.isAssignableFrom(cls)) {
+            this.dynamic = true;
             // Dynamic object has a handler but no proxy
             this.tableName = getTableNameForDynamicObject((Class<DynamicObject>)cls);
         } else {
-            // Create a proxy class for the domain class
-            proxyClass = (Class<T>)Proxy.getProxyClass(
-                    cls.getClassLoader(), new Class[]{cls});
-            ctor = getConstructorForInvocationHandler (proxyClass);
+            if (!cls.isInterface()) {
+                // Only interfaces or subclasses of DynamicObject
+                // can be persistence-capable.
+                throw new ClusterJUserException(local.message(
+                        "ERR_Not_Persistence_Capable_Type", name));
+            }
+            proxyInterfaces = new Class<?>[] {cls, Finalizable.class};
+            // Get the table name from Persistence Capable annotation
             persistenceCapable = cls.getAnnotation(PersistenceCapable.class);
             if (persistenceCapable == null) {
                 throw new ClusterJUserException(local.message(
                         "ERR_No_Persistence_Capable_Annotation", name));
             }
             this.tableName = persistenceCapable.table();
+            if (tableName.length() == 0) {
+                throw new ClusterJUserException(local.message(
+                        "ERR_No_TableAnnotation", name));
+            }
         }
+        List<String> columnNamesUsed = new ArrayList<String>();
         this.table = getTable(dictionary);
         if (table == null) {
             throw new ClusterJUserException(local.message("ERR_Get_NdbTable", name, tableName));
@@ -132,6 +163,7 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
         IndexHandlerImpl primaryIndexHandler =
             new IndexHandlerImpl(this, dictionary, primaryIndex, primaryKeyColumnNames);
         indexHandlerImpls.add(primaryIndexHandler);
+        List<DomainFieldHandler> fieldHandlerList = new ArrayList<DomainFieldHandler>();
 
         String[] indexNames = table.getIndexNames();
         for (String indexName: indexNames) {
@@ -155,6 +187,7 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
                 fieldNameList.add(fieldName);
                 fieldNameToNumber.put(domainFieldHandler.getName(), domainFieldHandler.getFieldNumber());
                 persistentFieldHandlers.add(domainFieldHandler);
+                fieldHandlerList.add(domainFieldHandler);
                 if (!storeColumn.isPrimaryKey()) {
                     nonPKFieldHandlers.add(domainFieldHandler);
                 }
@@ -168,7 +201,7 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
                 // remember get methods
                 String methodName = method.getName();
                 String name = convertMethodName(methodName);
-                Class type = getType(method);
+                Class<?> type = getType(method);
                 DomainFieldHandlerImpl domainFieldHandler = null;
                 if (methodName.startsWith("get")) {
                     Method unmatched = unmatchedSetMethods.get(name);
@@ -221,43 +254,124 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
                     if (domainFieldHandler.isPrimitive()) {
                         primitiveFieldHandlers.add(domainFieldHandler);
                     }
+                    fieldHandlerList.add(domainFieldHandler);
                 }
             }
             fieldNames = fieldNameList.toArray(new String[fieldNameList.size()]);
             // done with methods; if anything in unmatched we have a problem
             if ((!unmatchedGetMethods.isEmpty()) || (!unmatchedSetMethods.isEmpty())) {
-                throw new ClusterJUserException(
+                setUnsupported(
                         local.message("ERR_Unmatched_Methods", 
                         unmatchedGetMethods, unmatchedSetMethods));
             }
 
         }
+
+        // Check that no errors were reported during field analysis
+        String reasons = getUnsupported();
+        if (reasons != null) {
+            throw new ClusterJUserException(
+                    local.message("ERR_Field_Construction", name, reasons.toString()));
+        }
+
         // Check that all index columnNames have corresponding fields
         // indexes without fields will be unusable for query
         for (IndexHandlerImpl indexHandler:indexHandlerImpls) {
             indexHandler.assertAllColumnsHaveFields();
         }
 
+        // Make sure that the PRIMARY index is usable
+        // If not, this table has no primary key or there is no primary key field
+        if (!indexHandlerImpls.get(0).isUsable()) {
+            String reason = local.message("ERR_Primary_Field_Missing", name);
+            logger.warn(reason);
+            throw new ClusterJUserException(reason);
+        }
+
         if (logger.isDebugEnabled()) {
             logger.debug(toString());
             logger.debug("DomainTypeHandlerImpl " + name + "Indices " + indexHandlerImpls);
         }
+
+        // Compute the column for each field handler. 
+        // If no column for this field, increment the transient field counter.
+        // For persistent fields, column number is positive.
+        // For transient fields, column number is negative (index into transient field handler).
+        fieldNumberToColumnNumberMap = new int[numberOfFields];
+        String[] columnNames = table.getColumnNames();
+        this.fieldHandlers = fieldHandlerList.toArray(new DomainFieldHandlerImpl[numberOfFields]);
+
+        int transientFieldNumber = 0;
+        List<DomainFieldHandlerImpl> transientFieldHandlerList = new ArrayList<DomainFieldHandlerImpl>();
+        for (int fieldNumber = 0; fieldNumber < numberOfFields; ++fieldNumber) {
+            DomainFieldHandler fieldHandler = fieldHandlerList.get(fieldNumber);
+            // find the column name for the field
+            String columnName = fieldHandler.getColumnName();
+            boolean found = false;
+            for (int columnNumber = 0; columnNumber < columnNames.length; ++columnNumber) {
+                if (columnNames[columnNumber].equals(columnName)) {
+                    fieldNumberToColumnNumberMap[fieldNumber] = columnNumber;
+                    found = true;
+                    columnNamesUsed.add(columnNames[columnNumber]);
+                    break;
+                }
+            }
+            if (!found) {
+                // no column for this field; it is a transient field
+                fieldNumberToColumnNumberMap[fieldNumber] = --transientFieldNumber;
+                transientFieldHandlerList.add((DomainFieldHandlerImpl) fieldHandler);
+            }
+        }
+        // if projection, get list of projected fields and give them to the Table instance
+        if (cls.getAnnotation(Projection.class) != null) {
+            String[] projectedColumnNames = new String[columnNamesUsed.size()];
+            columnNamesUsed.toArray(projectedColumnNames);
+            table.setProjectedColumnNames(projectedColumnNames);
+        }
+        numberOfTransientFields = 0 - transientFieldNumber;
+        transientFieldHandlers = 
+            transientFieldHandlerList.toArray(new DomainFieldHandlerImpl[transientFieldHandlerList.size()]);
     }
 
-    protected <O extends DynamicObject> String getTableNameForDynamicObject(Class<O> cls) {
+    /** Get the table name mapped to the domain class.
+     * @param cls the domain class
+     * @return the table name for the domain class
+     */
+    @SuppressWarnings("unchecked")
+    protected static String getTableName(Class<?> cls) {
+        String tableName = null;
+        if (DynamicObject.class.isAssignableFrom(cls)) {
+            tableName = getTableNameForDynamicObject((Class<DynamicObject>)cls);
+        } else {
+            PersistenceCapable persistenceCapable = cls.getAnnotation(PersistenceCapable.class);
+            if (persistenceCapable != null) {
+                tableName = persistenceCapable.table();            
+            }
+        }
+        return tableName;
+    }
+
+    /** Get the table name for a dynamic object. The table name is available either from
+     * the PersistenceCapable annotation or via the table() method.
+     * @param cls the dynamic object class
+     * @return the table name for the dynamic object class
+     */
+    protected static <O extends DynamicObject> String getTableNameForDynamicObject(Class<O> cls) {
         DynamicObject dynamicObject;
         PersistenceCapable persistenceCapable = cls.getAnnotation(PersistenceCapable.class);
         String tableName = null;
         try {
-            dynamicObject = cls.newInstance();
+            dynamicObject = cls.getDeclaredConstructor().newInstance();
             tableName = dynamicObject.table();
             if (tableName == null  && persistenceCapable != null) {
                 tableName = persistenceCapable.table();
             }
-        } catch (InstantiationException e) {
-            throw new ClusterJUserException(local.message("ERR_Dynamic_Object_Instantiation", cls.getName()), e);
-        } catch (IllegalAccessException e) {
-            throw new ClusterJUserException(local.message("ERR_Dynamic_Object_Illegal_Access", cls.getName()), e);
+        } catch (InstantiationException | NoSuchMethodException | IllegalAccessException e) {
+            throw new ClusterJUserException(local.message("ERR_Dynamic_Object_Instantiation",
+                    e.getClass().getSimpleName(), cls.getName()), e);
+        } catch (InvocationTargetException e) {
+            throw new ClusterJUserException(local.message("ERR_Dynamic_Object_Invocation_Target",
+                    cls.getName()), e.getCause());
         }
         if (tableName == null) {
             throw new ClusterJUserException(local.message("ERR_Dynamic_Object_Null_Table_Name",
@@ -274,15 +388,20 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
 
     public ValueHandler getValueHandler(Object instance)
             throws IllegalArgumentException {
+        ValueHandler handler = null;
         if (instance instanceof ValueHandler) {
-            return (ValueHandler)instance;
+            handler = (ValueHandler)instance;
         } else if (instance instanceof DynamicObject) {
-            return (ValueHandler)((DynamicObject)instance).delegate();
+            DynamicObject dynamicObject = (DynamicObject)instance;
+            handler = (ValueHandler)dynamicObject.delegate();
         } else {
-            ValueHandler handler = (ValueHandler)
-                    Proxy.getInvocationHandler(instance);
-            return handler;
+            handler = (ValueHandler)Proxy.getInvocationHandler(instance);
         }
+        // make sure the value handler has not been released
+        if (handler.wasReleased()) {
+            throw new ClusterJUserException(local.message("ERR_Cannot_Access_Object_After_Release"));
+        }
+        return handler;
     }
 
     public void objectMarkModified(ValueHandler handler, String fieldName) {
@@ -290,8 +409,8 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
         handler.markModified(fieldNumber);
     }
 
-    public Class<T> getProxyClass() {
-        return proxyClass;
+    public Class<?>[] getProxyInterfaces() {
+        return proxyInterfaces;
     }
 
     public Class<T> getDomainClass() {
@@ -307,12 +426,14 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
 
     public void objectSetKeys(Object keys, Object instance) {
         ValueHandler handler = getValueHandler(instance);
+        objectSetKeys(keys, handler);
+    }
+
+    public void objectSetKeys(Object keys, ValueHandler handler) {
         int size = idFieldHandlers.length;
         if (size == 1) {
             // single primary key; store value in key field
-            for (DomainFieldHandler fmd: idFieldHandlers) {
-                fmd.objectSetKeyValue(keys, handler);
-            }
+            idFieldHandlers[0].objectSetKeyValue(keys, handler);
         } else if (keys instanceof java.lang.Object[]) {
             if (logger.isDetailEnabled()) logger.detail(keys.toString());
             // composite primary key; store values in key fields
@@ -330,23 +451,37 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
         handler.resetModified();
     }
 
-    @SuppressWarnings("unchecked")
     public void objectSetCacheManager(CacheManager cm, Object instance) {
-        InvocationHandlerImpl<T> handler =
-                (InvocationHandlerImpl<T>)getValueHandler(instance);
-        handler.setCacheManager(cm);
+        getValueHandler(instance).setCacheManager(cm);
     }
 
-    public T newInstance() {
+    @Override
+    public T newInstance(Db db) {
+        ValueHandler valueHandler = valueHandlerFactory.getValueHandler(this, db);
+        return newInstance(valueHandler);
+    }
+
+    /** Create a new domain type instance from the result.
+     * @param resultData the results from a database query
+     * @param db the Db
+     * @return the domain type instance
+     */
+    public T newInstance(ResultData resultData, Db db) {
+        ValueHandler valueHandler = valueHandlerFactory.getValueHandler(this, db, resultData);
+        T result = newInstance(valueHandler);
+        return result;
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public T newInstance(ValueHandler valueHandler) {
         T instance;
         try {
-            InvocationHandlerImpl<T> handler = new InvocationHandlerImpl<T>(this);
             if (dynamic) {
-                instance = cls.newInstance();
-                ((DynamicObject)instance).delegate((DynamicObjectDelegate)handler);
+                instance = cls.getDeclaredConstructor().newInstance();
+                ((DynamicObject)instance).delegate((DynamicObjectDelegate)valueHandler);
             } else {
-                instance = ctor.newInstance(new Object[] {handler});
-                handler.setProxy(instance);
+                instance = (T)Proxy.newProxyInstance(cls.getClassLoader(), proxyInterfaces, valueHandler);
             }
             return instance;
         } catch (InstantiationException ex) {
@@ -364,14 +499,18 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
         } catch (SecurityException ex) {
             throw new ClusterJException(
                     local.message("ERR_Create_Instance", cls.getName()), ex);
+        } catch (NoSuchMethodException ex) {
+            throw new ClusterJException(
+                    local.message("ERR_Create_Instance", cls.getName()), ex);
         }
     }
 
 
-    public void initializeNotPersistentFields(InvocationHandlerImpl<T> handler) {
+    public void initializePrimitiveFields(ValueHandler handler) {
         for (DomainFieldHandler fmd:primitiveFieldHandlers) {
             ((AbstractDomainFieldHandlerImpl) fmd).objectSetDefaultValue(handler);
         }
+        handler.resetModified();
     }
 
     /** Convert a method name to a javabeans property name.
@@ -384,11 +523,6 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
         String head = methodName.substring(3, 4).toLowerCase();
         String tail = methodName.substring(4);
         return head + tail;
-    }
-
-    @SuppressWarnings( "unchecked" )
-    public T getInstance(ValueHandler handler) {
-        return (T)((InvocationHandlerImpl)handler).getProxy();
     }
 
     private Class<?> getType(Method method) {
@@ -414,50 +548,46 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
         return result;
     }
 
-    /** TODO: Protect with doPrivileged. */
-    protected Constructor<T> getConstructorForInvocationHandler(
-            Class<T> cls) {
-        try {
-            return cls.getConstructor(invocationHandlerClassArray);
-        } catch (NoSuchMethodException ex) {
-            throw new ClusterJFatalInternalException(
-                    local.message("ERR_Get_Constructor", cls), ex);
-        } catch (SecurityException ex) {
-            throw new ClusterJFatalInternalException(
-                    local.message("ERR_Get_Constructor", cls), ex);
-        }
-    }
-
-    public ValueHandler createKeyValueHandler(Object keys) {
+    /** Create a key value handler from the key(s). The keys are as given by the user.
+     * For domain classes with a single key field, the key is the object wrapper for the
+     * primitive key value. For domain classes with compound primary keys, the key is
+     * an Object[] in which the values correspond to the order of keys in the table
+     * definition.
+     * The key is validated for proper types, and if a key component is part of a partition key,
+     * it must not be null.
+     * @param keys the key(s)
+     * @param db the Db
+     * @return the key value handler
+     */
+    public ValueHandler createKeyValueHandler(Object keys, Db db) {
         if (keys == null) {
             throw new ClusterJUserException(
                     local.message("ERR_Key_Must_Not_Be_Null", getName(), "unknown"));
         }
-        Object[] keyValues = new Object[numberOfFields];
         // check the cardinality of the keys with the number of key fields
         if (numberOfIdFields == 1) {
             Class<?> keyType = idFieldHandlers[0].getType();
             DomainFieldHandler fmd = idFieldHandlers[0];
             checkKeyType(fmd.getName(), keyType, keys);
-            int keyFieldNumber = fmd.getFieldNumber();
-            keyValues[keyFieldNumber] = keys;
         } else {
             if (!(keys.getClass().isArray())) {
                 throw new ClusterJUserException(
                         local.message("ERR_Key_Must_Be_An_Object_Array",
                         numberOfIdFields));
             }
-            Object[]keyObjects = (Object[])keys;
             for (int i = 0; i < numberOfIdFields; ++i) {
                 DomainFieldHandler fmd = idFieldHandlers[i];
-                int index = fmd.getFieldNumber();
-                Object keyObject = keyObjects[i];
+                Object keyObject = ((Object[])keys)[i];
                 Class<?> keyType = fmd.getType();
                 checkKeyType(fmd.getName(), keyType, keyObject);
-                keyValues[index] = keyObjects[i];
+                if (keyObject == null && fmd.isPartitionKey()) {
+                    // partition keys must not be null
+                    throw new ClusterJUserException(local.message("ERR_Key_Must_Not_Be_Null", getName(), 
+                            fieldHandlers[i].getName()));
+                }
             }
         }
-        return new KeyValueHandlerImpl(keyValues);
+        return valueHandlerFactory.getKeyValueHandler(this, db, keys);
     }
 
     /** Check that the key value matches the key type. Keys that are part
@@ -476,9 +606,13 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
         Class<?> valueType = keys.getClass();
         if (keyType.isAssignableFrom(valueType) ||
                 (keyType == int.class && valueType == Integer.class) ||
-                (keyType == Integer.class & valueType == int.class) ||
-                (keyType == Long.class & valueType == long.class) ||
-                (keyType == long.class & valueType == Long.class)) {
+                (keyType == Integer.class && valueType == int.class) ||
+                (keyType == Long.class && valueType == long.class) ||
+                (keyType == long.class && valueType == Long.class) ||
+                (keyType == short.class && valueType == Short.class) ||
+                (keyType == Short.class && valueType == short.class) ||
+                (keyType == byte.class && valueType == Byte.class) ||
+                (keyType == Byte.class && valueType == byte.class)) {
             return;
         } else {
                 throw new ClusterJUserException(
@@ -487,13 +621,81 @@ public class DomainTypeHandlerImpl<T> extends AbstractDomainTypeHandlerImpl<T> {
         }
     }
 
+    /** Expand the given Object or Object[] into an Object[] containing key values
+     * in the proper position. The parameter is as given by the user. 
+     * For domain classes with a single key field, the key is the object wrapper for the
+     * primitive key value. For domain classes with compound primary keys, the key is
+     * an Object[] in which the values correspond to the order of keys in the table
+     * definition.
+     * 
+     * @param keys an object or Object[] containing all primary keys
+     * @return an Object[] of length numberOfFields in which key values are in their proper position
+     */
+    public Object[] expandKeyValues(Object keys) {
+        Object[] keyValues;
+        if (keys instanceof Object[]) {
+            keyValues = (Object[])keys;
+        } else {
+            keyValues = new Object[] {keys};
+        }
+        Object[] result = new Object[numberOfFields];
+        int i = 0;
+        for (Integer idFieldNumber: idFieldNumbers) {
+            result[idFieldNumber] = keyValues[i++];
+        }
+        return result;
+    }
+
     public Class<?> getOidClass() {
         throw new ClusterJFatalInternalException(local.message("ERR_Implementation_Should_Not_Occur"));
     }
 
-    protected ColumnMetadata[] columnMetadata() {
+    public ColumnMetadata[] columnMetadata() {
         ColumnMetadata[] result = new ColumnMetadata[numberOfFields];
         return persistentFieldHandlers.toArray(result);
+    }
+
+    /** Factory for default InvocationHandlerImpl */
+    protected ValueHandlerFactory defaultInvocationHandlerFactory = new ValueHandlerFactory()  {
+
+        public <V> ValueHandler getValueHandler(DomainTypeHandlerImpl<V> domainTypeHandler, Db db) {
+            return new InvocationHandlerImpl<V>(domainTypeHandler);
+        }
+
+        public <V> ValueHandler getKeyValueHandler(
+                DomainTypeHandlerImpl<V> domainTypeHandler, Db db, Object keyValues) {
+            Object[] expandedKeyValues = expandKeyValues(keyValues);
+            return new KeyValueHandlerImpl(expandedKeyValues);
+        }
+
+        public <V> ValueHandler getValueHandler(
+                DomainTypeHandlerImpl<V> domainTypeHandler, Db db, ResultData resultData) {
+            ValueHandler result = new InvocationHandlerImpl<V>(domainTypeHandler);
+            objectSetValues(resultData, result);
+            return result;
+        }
+    };
+
+    public int getNumberOfTransientFields() {
+        return numberOfTransientFields;
+    }
+
+    public int[] getFieldNumberToColumnNumberMap() {
+        return fieldNumberToColumnNumberMap;
+    }
+
+    /** Create a new object array containing default values for all transient fields.
+     * 
+     * @return default transient field values
+     */
+    public Object[] newTransientValues() {
+        Object[] result = new Object[numberOfTransientFields];
+        int i = 0;
+        for (DomainFieldHandlerImpl transientFieldHandler: transientFieldHandlers) {
+            Object value = transientFieldHandler.getDefaultValue();
+            result[i++] = value;
+        }
+        return result;
     }
 
 }
